fix header gap issue

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -63,7 +63,7 @@ body {
 #map_canvas {
   position: absolute;
   bottom: 0;
-  height: 90%;
+  height: 100%;
   width: 100%;
   z-index: 0;
 }
@@ -77,7 +77,7 @@ nav {
 
 .nav-button {
   padding: .2em .5em;
-  border: 1px solid #CCC;
+  border: 1px solid #FF5C5C;
   background-color: #FF5C5C;
   color: #FFF;
 }
@@ -94,7 +94,7 @@ nav {
   width: 100%;
   height: 100%;
   overflow: auto;
-  opacity: .75;
+  opacity: .8;
   z-index: 2;
   background-color: #000;
 }
@@ -199,7 +199,7 @@ nav {
   display: inline-block;
   background-color: #4da1ff;
   padding: .2em .5em;
-  border: 1px solid #CCC;
+  border: 1px solid #4DA1FF;
   margin: 0 auto;
   top: -1em;
   color: #FFF;
@@ -446,7 +446,7 @@ nav {
   display: block;
   padding: .2em 0;
   width: 138px;
-  border: 1px solid #CCC;
+  border: 1px solid #4DA1FF;
   background-color: #4DA1FF;
   font-family: "Open Sans Condensed", sans-serif;
   font-size: .9em;
